# full-stack-fastapi-template

./: .env  CLAUDE.md  README_WORKSPACE.md  WORKSPACE_BOOTSTRAP.md  WORKSPACE_SELFTEST.md  bootstrap.md  package-lock.json  pyproject.toml  workspace.py
.aila/: .docignore  documentation.json
.claude/: aila-code-doc  settings.json  skill_catalog.json
.kiro/agents/: backend-py.json  catalog-schema.json  frontend-ts.json  sdk-skill.json
.kiro/settings/: lsp.json
.kiro/skills/skill-agent-guide/: SKILL.md
.kiro/steering/: wsg-agent-guide.md
backend/app/: backend_pre_start.py  crud.py  initial_data.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py  security.py
backend/tests/: conftest.py
backend/tests/utils/: project.py  (+1 more)
docs/: adding-project-resources.md  adding-projects-resource-with-know.md  know-md-impact-analysis.md  workshop.md
docs/workshop/: agenda.md  agent-assignment.md  know-md-impact-analysis.md  participant-email.md  pir-time-tracking-feature.md  workshop.md
document-meta/: aila-code-intelligence-guide.md  code-documentation-standard.md
document-meta/python/: KNOW.md
document-meta/typescript/: KNOW.md
frontend/: package.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts  utils.ts
full_stack_fastapi_template/: __init__.py
full_stack_fastapi_template/skills/: README.md
prompts/: backend-py.md  frontend-ts.md  wsg-agent-guide.md  wsg-default-catalog-schema.md  wsg-default-sdk-skill.md
scripts/: start.sh  stop.sh
(+81 files in other folders)
